--- a/res/layout/activity_content.xml
+++ b/res/layout/activity_content.xml
@@ -1,13 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:orientation="vertical" >
+    android:layout_height="match_parent" >
 
     <ScrollView
         android:layout_width="match_parent"
-        android:layout_height="wrap_content" 
-        android:layout_weight="16">
+        android:layout_height="wrap_content" >
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -55,9 +53,9 @@
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="40dp"
+        android:layout_height="44dp"
         android:orientation="horizontal" 
-        android:layout_weight="1">
+        android:layout_alignParentBottom="true">
 
         <Button
             android:id="@+id/btn_back"
@@ -81,4 +79,4 @@
             android:background="@drawable/collectcontent" />
     </LinearLayout>
 
-</LinearLayout>
+</RelativeLayout>
